--- a/index.css
+++ b/index.css
@@ -1,44 +1,63 @@
+body {
+  font-family: "Open Sans", sans-serif;
+  background-color: #5b6bff;
+  background-image: linear-gradient(to bottom right, #5b6bff, #b8b8ff);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 .container {
-    width: 300px;
-    margin: 0 auto;
-    text-align: center;
-    background-color: #F5F5F5;
-    border-radius: 10px;
-    padding: 20px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  }
-  
-  h1 {
-    color: #333;
-  }
-  
-  label {
-    display: inline-block;
-    margin-bottom: 10px;
-    text-align: left;
-  }
-  
-  input[type=text], input[type=password] {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 100%;
-  }
-  
-  button[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
+  text-align: center;
+  width: 90%;
+  max-width: 500px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.95);
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+}
+
+h1 {
+  font-weight: 600;
+  color: #222;
+  margin-bottom: 30px;
+}
+
+label {
+  font-weight: bold;
+  color: #444;
+}
+
+input[type="password"] {
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
+  display: inline-block;
+  border: none;
+  border-radius: 10px;
+  box-sizing: border-box;
+  font-size: 16px;
+  background-color: #e6e6ff;
+  color: #444;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+}
+
+button[type="submit"] {
+  background-color: #5b6bff;
+  color: white;
+  padding: 15px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  text-shadow: 0px 0px 2px rgba(0,0,0,0.2);
+  transition: all 0.3s ease;
+}
+
+button[type="submit"]:hover {
+  background-color: #4f5be6;
+}
