--- a/main.css
+++ b/main.css
@@ -1,61 +1,60 @@
 body {
-    background-color: #0c0c0c;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .container {
-    margin: 0 auto;
-    padding: 20px;
-    width: 80%;
-    max-width: 800px;
-  }
-  
-  h1 {
-    text-align: center;
-    color: #fff;
-    font-weight: bold;
-    font-size: 36px;
-    margin-bottom: 20px;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    margin-bottom: 20px;
-  }
-  
-  textarea {
-    border: none;
-    background-color: #fff;
-    color: #000;
-    font-size: 18px;
-    padding: 20px;
-    border-radius: 5px;
-    resize: none;
-    height: 200px;
-    margin-bottom: 10px;
-  }
-  
-  button {
-    background-color: #e74c3c;
-    color: #fff;
-    font-size: 18px;
-    border: none;
-    border-radius: 5px;
-    padding: 10px;
-    cursor: pointer;
-    transition: all .3s ease-in-out;
-  }
-  
-  button:hover {
-    background-color: #c0392b;
-  }
-  
-  .memo {
-    border: 1px solid #eee;
-    background-color: #fff;
-    color: #000
-  }
+  font-family: "Open Sans", sans-serif;
+  background-color: #5b6bff;
+  background-image: linear-gradient(to bottom right, #5b6bff, #b8b8ff);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.container {
+  text-align: center;
+  width: 90%;
+  max-width: 500px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: rgba(255, 255, 255, 0.95);
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+}
+
+h1 {
+  font-weight: 600;
+  color: #222;
+  margin-bottom: 30px;
+}
+
+textarea {
+  width: 100%;
+  padding: 15px;
+  margin: 10px 0;
+  display: inline-block;
+  border: none;
+  border-radius: 10px;
+  box-sizing: border-box;
+  font-size: 16px;
+  background-color: #e6e6ff;
+  color: #444;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+  resize: none;
+  height: 250px;
+}
+
+button {
+  background-color: #5b6bff;
+  color: white;
+  padding: 15px;
+  margin: 10px 0;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
+  text-shadow: 0px 0px 2px rgba(0,0,0,0.2);
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  background-color: #4f5be6;
+}
