--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
 body {
   font-family: "Open Sans", sans-serif;
   background-color: #5b6bff;
@@ -15,18 +25,11 @@ body {
   padding: 20px;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.95);
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
-}
-
-h1 {
-  font-weight: 600;
-  color: #222;
-  margin-bottom: 30px;
-}
-
-label {
-  font-weight: bold;
-  color: #444;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 input[type="password"] {
@@ -40,7 +43,7 @@ input[type="password"] {
   font-size: 16px;
   background-color: #e6e6ff;
   color: #444;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
 }
 
 button[type="submit"] {
@@ -51,13 +54,40 @@ button[type="submit"] {
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  width: 100%;
   font-size: 16px;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-  text-shadow: 0px 0px 2px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
+  align-self: flex-end;
 }
 
 button[type="submit"]:hover {
   background-color: #4f5be6;
+}
+
+@media screen and (max-width: 767px) {
+  body {
+    background-color: #f0f0f0;
+    background-image: none;
+  }
+
+  .container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+  }
+}
+@media screen and (max-width: 480px) {
+  input[type="password"] {
+    padding: 10px;
+    margin: 5px 0;
+    font-size: 14px;
+  }
+
+  button[type="submit"] {
+    padding: 10px;
+    margin: 5px 0;
+    font-size: 14px;
+  }
 }
