--- a/main.css
+++ b/main.css
@@ -2,31 +2,45 @@ body {
   font-family: "Open Sans", sans-serif;
   background-color: #5b6bff;
   background-image: linear-gradient(to bottom right, #5b6bff, #b8b8ff);
+  display : flex;
+  margin: 0;
+  height: 100vh;
+}
+
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  width: 100%;
 }
+
 
 .container {
   text-align: center;
   width: 90%;
-  max-width: 500px;
+  margin: 20px auto;
   padding: 20px;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.95);
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.3);
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+  position: relative;
+  background-color: #f9fafc;
+  height: 90%;
 }
 
+
 h1 {
+  flex: 1;
+  text-align: center;
   font-weight: 600;
   color: #222;
-  margin-bottom: 30px;
+  margin: 20px 0;
+  padding: 0 10px;
 }
 
 textarea {
   width: 100%;
-  padding: 15px;
+  padding: 10px;
   margin: 10px 0;
   display: inline-block;
   border: none;
@@ -35,12 +49,16 @@ textarea {
   font-size: 16px;
   background-color: #e6e6ff;
   color: #444;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.1);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.1);
   resize: none;
-  height: 250px;
+  overflow-y: scroll;
+  height: 75vh;
 }
 
+
+
 button {
+  margin-left: auto;
   background-color: #5b6bff;
   color: white;
   padding: 15px;
@@ -48,10 +66,10 @@ button {
   border: none;
   border-radius: 10px;
   cursor: pointer;
-  width: 100%;
+  width: 20%;
   font-size: 16px;
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.2);
-  text-shadow: 0px 0px 2px rgba(0,0,0,0.2);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
 }
 
